# DWE_OS_2

./: .editorconfig  .gitignore  .gitmodules  DESCRIPTION.md  README.md  build_project.sh  build_repo.sh  create_release.sh  create_rpi_image.sh  create_venv.sh  get_dependencies.py  install.sh  install_dependencies.sh  install_requirements.sh  reload_build.sh  rpi-boot-script.sh  run_dev.sh  run_release.py  run_release.sh  update_versioning.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: backend-ci-pipeline.yml  build-image.yml  create-release.yml  frontend-ci-pipeline.yml  npm-publish.yml  pi-gen.yml  system-api-ci-pipeline.yml  system-api-pipeline.yml
backend/: .clang-format  CMakeLists.txt  README.md  build_backend.sh  getWifiRPI.py  getWifiUbuntu.py
backend/src/apps/: server.cpp  server.html  test.html  test.xml
backend/src/camera/: list_devices.hpp  v4l2-camera.cpp  v4l2-camera.hpp  v4l2-types.hpp
backend/src/ehd/: device-list.cpp  device-list.hpp  ehd-controls.hpp  ehd-device.cpp  ehd-device.hpp  ehd-option.cpp  ehd-option.hpp
backend/src/gstreamer/: gst-pipeline.cpp  gst-pipeline.hpp
backend/src/net/: broadcast-server.cpp  broadcast-server.hpp
backend/src/settings/: settings-manager.cpp  settings-manager.hpp
backend_py/: .clang-format  .gitignore  README.md  api.py  build.sh  camera_helper.c  camera_helper_loader.py  camera_types.py  clean.sh  device.py  device_settings.json  enumeration.py  main.py  requirements.txt  run.py  run.sh  saved_types.py  schemas.py  server_prefrences.json  settings.py  stream.py  test.py  util.py  utils.py  uvc_functions.c
backend_py/src/: __init__.py  __main__.py  broadcast_server.py  camera_helper_loader.py  camera_types.py  device.py  device_manager.py  device_utils.py  ehd.py  ehd_controls.py  enumeration.py  recording.py  saved_types.py  saving.py  schemas.py  server.py  settings.py  stellar.py  stream.py  stream_utils.py  (+2 more)
docker/: Dockerfile  blueos.json  build-docker.sh
docs/: kernel-uvc-issue.md
frontend/:  webpack.config.js  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  build_frontend.sh  components.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.mts
libehd/: CMakeLists.txt
service/: dwe_os_2.service
system_api/: .gitignore  README.md  build_system_api.sh  cpuHandler.py  cpu_handler.go  diskHandler.py  errors.go  go.mod  go.sum  install_requirements.py  logger.go  main.go  network_types.go  processMonitor.go  raspberry_python.sh  request_types.go  requirements.txt  response_types.go  server.py  systemHandler.py  system_handler.go  tempHandler.py  temperatureHandler.py  temperature_handler.go  videoTypes.go  wifiHandler.py  wifiHandlerRPI.py  wifi_handler.go
test/: explorehd_ctrls.h  main.c
(+250 files in other folders)
